# Projects

Arithmetic_arranger/: arithmetic_arranger.py
Budget_App/: budget.py
Demographic_Data_Analyzer/: demographic_data_analyzer.py
Fake news/: fakenews.ipynb
Mean_Variance_Standard Deviation_Calculator/: mean_var_std.py
Medical_Data_Visualizer/: medical_data_visualizer.py  pyproject.toml
Mock Data/: EDA.ipynb  Mock Sales Data.ipynb  all_data.csv
Mock Data/information/: sales data per month.docx
Mock Data/sales_data/: sales_apr_2019.csv  sales_aug_2019.csv  sales_dec_2019.csv  sales_feb_2019.csv  sales_jan_2019.csv  sales_jul_2019.csv  sales_jun_2019.csv  sales_mar_2019.csv  sales_may_2019.csv  sales_nov_2019.csv  sales_oct_2019.csv  sales_sep_2019.csv
Probability_Calculator/: prob_calculator.py
Shape_Calculator/: shape_calculator.py
Time_Calculator/: time_calculator.py
Time_Series_Visualizer/: pyproject.toml  time_series_visualizer.py
